xclock/TODO
[2/4] Compiling C object xclock.p/Clock.c.o
FAILED: [code=1] xclock.p/Clock.c.o
gcc -Ixclock.p -I. -I.. -I/usr/pkg/include -I/usr/pkg/include/freetype2 -I/usr/pkg/include/libpng16 -I/usr/include -fdiagnostics-color=always -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -fno-strict-aliasing -DHAVE_CONFIG_H -D_CONST_X_STRING -O2 -g -fstack-clash-protection -D_POSIX_THREAD_SAFE_FUNCTIONS -D_REENTRANT -MD -MQ xclock.p/Clock.c.o -MF xclock.p/Clock.c.o.d -o xclock.p/Clock.c.o -c ../Clock.c
../Clock.c: In function 'XmuCvtStringToXftShape':
../Clock.c:612:24: error: implicit declaration of function 'uselocale'; did you mean 'setlocale'? [-Wimplicit-function-declaration]
  612 |     locale_t old_loc = uselocale(c_loc);
      |                        ^~~~~~~~~
      |                        setlocale
../Clock.c:612:24: error: initialization of 'locale_t' {aka 'struct _locale *'} from 'int' makes pointer from integer without a cast [-Wint-conversion]
In file included from /usr/include/stdio.h:595,
                 from /tmp/wip/xclock/work/.buildlink/include/freetype2/freetype/config/ftstdlib.h:112,
                 from /tmp/wip/xclock/work/.buildlink/include/freetype2/freetype/config/ftconfig.h:41,
                 from /tmp/wip/xclock/work/.buildlink/include/freetype2/freetype/freetype.h:24,
                 from /tmp/wip/xclock/work/.buildlink/include/X11/Xft/Xft.h:41,
                 from ../ClockP.h:61,
                 from ../Clock.c:85:
../Clock.c:701:32: warning: format '%d' expects argument of type 'int', but argument 6 has type 'ptrdiff_t' {aka 'long int'} [-Wformat=]
  701 |                                "Error in shape at position %d: %s.", errpos + 1,
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~
      |                                                                             |
      |                                                                             ptrdiff_t {aka long int}
../Clock.c:701:61: note: format string is defined here
  701 |                                "Error in shape at position %d: %s.", errpos + 1,
      |                                                            ~^
      |                                                             |
      |                                                             int
      |                                                            %ld
../Clock.c: In function 'clock_to_utf8':
../Clock.c:2426:11: warning: assignment discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
 2426 |     inptr = str;
      |           ^
